--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <nav class="container mx-auto max-w-6xl px-6 py-5 flex justify-between items-center">
                 <a href="#" class="text-xl font-black tracking-tighter flex items-center gap-4">
                     <div class="w-9 h-9 bg-indigo-600 rounded-lg flex items-center justify-center text-white shadow-xl">
-                        <i class="fas fa-hammer"></i>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="4 7 4 4 20 4 20 7"></polyline><line x1="9" y1="20" x2="15" y2="20"></line><line x1="12" y1="14" x2="12" y2="20"></line><path d="M12 14H4a2 2 0 0 1-2-2V7h20v5a2 2 0 0 1-2 2h-8Z"></path></svg>
                     </div>
                     <span>WRITER'S FORGE</span>
                 </a>
