--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         zone.addEventListener('mouseleave', () => {
             mockup.style.transform = `rotateX(0deg) rotateY(0deg) scale(1)`;
         });
-
+        //resizes the window
         window.addEventListener('resize', resize); resize(); animate();
     </script>
 </body>
